@@ -6,11 +6,33 @@ config DRIVER_FAT
 	help
 	  This driver implements a FAT filesystem driver.
 
+config DRIVER_FAT_BLOCKDEVICE
+	string "Underlying driver region"
+	depends on DRIVER_FAT
+	default "cf"
+	help
+	  The filesystem driver is staticly links to an underlying
+	  driver/region for access to the media.  Set that region
+	  here.  A later update to the filesystem code will let the
+	  user specify this region dynamically. 
+	
+
 config DRIVER_EXT2
 	bool "EXT2 Filesystem"
 	default n
 	help
 	  This driver implements an Ext2 filesystem driver.
+
+config DRIVER_EXT2_BLOCKDEVICE
+	string "Underlying driver region"
+	depends on DRIVER_EXT2
+	default "cf"
+	help
+	  The filesystem driver is staticly links to an underlying
+	  driver/region for access to the media.  Set that region
+	  here.  A later update to the filesystem code will let the
+	  user specify this region dynamically. 
+	
 
 config DRIVER_NOR_CFI
 	bool "CFI NOR Flash"
